[tool.poetry]
name = "aimlsessions"
version = "0.1.0"
description = "aiml session notebooks"
authors = ["Diwaker Ghimire <dwkrghm@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
